--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
   "name": "platyboost",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.0",
+  "description": "A boilerplate to work on your code, not trying to understand someone else's",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-eslint": "^6.0.0-beta.6",
+    "babel-register": "^6.7.2",
+    "eslint": "^2.4.0"
+  },
+  "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-function-bind": "^6.5.2",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "koa": "^2.0.0-alpha.3",
+    "koa-bodyparser": "^2.0.1",
+    "koa-convert": "^1.2.0",
+    "koa-session": "^3.3.1",
+    "koa-static": "^2.0.0"
+  }
 }
