--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "A boilerplate to work on your code, not trying to understand someone else's",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./__test__/*.js --opts ./__test__/mocha.opts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^6.0.0-beta.6",
     "babel-register": "^6.7.2",
-    "eslint": "^2.4.0"
+    "chai": "^3.5.0",
+    "eslint": "^2.4.0",
+    "mocha": "^2.4.5",
+    "node-fetch": "^1.3.3"
   },
   "dependencies": {
+    "agregate": "^0.18.0",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.5.2",
@@ -21,6 +25,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
+    "config": "^1.19.0",
     "koa": "^2.0.0-alpha.3",
     "koa-bodyparser": "^2.0.1",
     "koa-convert": "^1.2.0",
