--- a/package.json
+++ b/package.json
@@ -9,12 +9,41 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.3.3",
     "babel-eslint": "^6.0.0-beta.6",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.2",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "fbjs": "^0.8.0-alpha.3",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.10.0",
+    "jade": "^1.11.0",
+    "jade-html-loader": "0.0.3",
+    "json-loader": "^0.5.4",
+    "koa-webpack-dev-middleware": "^1.2.0",
+    "koa-webpack-hot-middleware": "^1.0.3",
+    "lost": "^6.7.2",
     "mocha": "^2.4.5",
-    "node-fetch": "^1.3.3"
+    "node-fetch": "^1.3.3",
+    "postcss-cssnext": "^2.5.1",
+    "postcss-font-magician": "^1.4.0",
+    "postcss-import": "^8.0.2",
+    "postcss-loader": "^0.8.2",
+    "postcss-normalize": "^0.1.2",
+    "react": "^15.0.0-rc.2",
+    "react-dom": "^15.0.0-rc.2",
+    "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
+    "redux": "^3.3.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
+    "whatwg-fetch": "^0.11.0"
   },
   "dependencies": {
     "agregate": "^0.18.0",
