--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
+    "plugins": [
+        "react"
+    ],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 7,
@@ -19,7 +22,7 @@
         "__dirname": true,
         "__DEV__": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "rules": {
         "accessor-pairs": 1,
         "array-callback-return": 2,
