--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
+    "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs": "^0.8.0-alpha.3",
     "file-loader": "^0.8.5",
