--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "koa-bodyparser": "^2.0.1",
     "koa-convert": "^1.2.0",
     "koa-session": "^3.3.1",
-    "koa-static": "^2.0.0"
+    "koa-static": "^2.0.0",
+    "memory-fs": "^0.3.0"
   }
 }
