--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
     "koa-convert": "^1.2.0",
     "koa-session": "^3.3.1",
     "koa-static": "^2.0.0",
-    "memory-fs": "^0.3.0"
+    "memory-fs": "^0.3.0", "webpack-hot-middleware": "latest"
   }
 }
