--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     },
     "extends": ["eslint:recommended", "plugin:react/recommended"],
     "rules": {
+        "semi": [2, "never"],
         "accessor-pairs": 1,
         "array-callback-return": 2,
         "complexity": [1, {"maximum": 10}],
@@ -35,7 +36,7 @@
         "no-extend-native": 2,
         "no-labels": 2,
         "no-loop-func": 2,
-        "no-magic-numbers": 2,
+        "no-magic-numbers": [2, { "ignore": [0,1] }],
         "yoda": 2,
         "arrow-body-style": 2,
         "prefer-const": 2,
