--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "redux": "^3.3.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "whatwg-fetch": "^0.11.0"
+    "whatwg-fetch": "^0.11.0",
+    "webpack-dev-middleware": "latest"
   },
   "dependencies": {
     "agregate": "^0.18.0",
@@ -62,6 +63,9 @@
     "koa-convert": "^1.2.0",
     "koa-session": "^3.3.1",
     "koa-static": "^2.0.0",
-    "memory-fs": "^0.3.0", "webpack-hot-middleware": "latest"
+    "memory-fs": "^0.3.0",
+    "react-helmet": "^3.0.2",
+    "webpack-externals-plugin": "^1.0.0",
+    "webpack-hot-middleware": "latest"
   }
 }
