--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "platyboost",
-  "version": "0.0.0",
-  "description": "A boilerplate to work on your code, not trying to understand someone else's",
+  "name": "arras",
+  "version": "0.1.0",
+  "description": "a React boilerplate aimed to be as obvious as possible and as minimal as possible",
   "main": "index.js",
   "scripts": {
     "test": "mocha ./__test__/*.js --opts ./__test__/mocha.opts",
@@ -10,20 +10,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.3.3",
-    "babel-eslint": "^6.0.0-beta.6",
+    "autoprefixer": "^6.3.6",
+    "babel-eslint": "^6.0.3",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.2",
+    "babel-polyfill": "^6.7.4",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.4.0",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint": "^2.8.0",
+    "eslint-plugin-react": "^5.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs": "^0.8.0-alpha.3",
+    "fbjs": "^0.8.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.10.0",
+    "html-webpack-plugin": "^2.16.0",
     "jade": "^1.11.0",
     "jade-html-loader": "0.0.3",
     "json-loader": "^0.5.4",
@@ -31,41 +31,41 @@
     "koa-webpack-hot-middleware": "^1.0.3",
     "lost": "^6.7.2",
     "mocha": "^2.4.5",
-    "node-fetch": "^1.3.3",
-    "postcss-cssnext": "^2.5.1",
+    "node-fetch": "^1.5.1",
+    "postcss-cssnext": "^2.5.2",
     "postcss-font-magician": "^1.4.0",
-    "postcss-import": "^8.0.2",
+    "postcss-import": "^8.1.0",
     "postcss-loader": "^0.8.2",
-    "postcss-normalize": "^0.1.2",
-    "react": "^15.0.0-rc.2",
-    "react-dom": "^15.0.0-rc.2",
+    "postcss-normalize": "^0.2.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.0.1",
-    "redux": "^3.3.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "whatwg-fetch": "^0.11.0",
-    "webpack-dev-middleware": "latest"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
+    "redux": "^3.5.1",
+    "style-loader": "^0.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "whatwg-fetch": "^0.11.0"
   },
   "dependencies": {
     "agregate": "^0.18.0",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.5.2",
-    "babel-polyfill": "^6.7.2",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "config": "^1.19.0",
-    "koa": "^2.0.0-alpha.3",
-    "koa-bodyparser": "^2.0.1",
+    "config": "^1.20.1",
+    "koa": "^2.0.0",
+    "koa-bodyparser": "^3.0.0",
     "koa-convert": "^1.2.0",
     "koa-session": "^3.3.1",
-    "koa-static": "^2.0.0",
+    "koa-static": "^3.0.0",
     "memory-fs": "^0.3.0",
     "react-helmet": "^3.0.2",
+    "webpack": "^2.1.0-beta.5",
     "webpack-externals-plugin": "^1.0.0",
-    "webpack-hot-middleware": "latest"
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
